--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,15 @@ cffi==1.14.0
 chardet==3.0.4
 colorama==0.4.3
 cryptography==2.8
+dj-database-url==0.5.0
 Django==3.0.3
+django-heroku==0.3.1
+gunicorn==20.0.4
 idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+psycopg2==2.8.4
 pycparser==2.20
 pylint==2.4.4
 pyOpenSSL==19.1.0
@@ -23,6 +27,7 @@ six==1.14.0
 soupsieve==2.0
 sqlparse==0.3.0
 urllib3==1.25.8
+whitenoise==5.0.1
 win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.11.2
