--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pycparser==2.20
 pylint==2.4.4
 pyOpenSSL==19.1.0
 PySocks==1.7.1
+python-decouple==3.3
 pytz==2019.3
 requests==2.23.0
 six==1.14.0
